--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.jpa.properties.hibernate.dialect =org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 
+mail.name=name
+mail.host=host
+mail.password=password
+
